# vv_service

./: .gitignore  IVideoStorage.py  README.md  Tasks.md  TechReport.md  __main__.py  main.py  pyproject.toml  requirements.txt  start-service.sh
errors/: InvalidVideoIdError.py
src/: Config.py  DbAccessor.py  ImageFeatureExtractor.py  SimilarVideosSearcher.py  VAService.py  VectorsSimilarityCalculator.py  VideoAnalyzer.py  VideoMetadataExtractor.py  VideoSimilarityAnalyzer.py  __main__.py  app.py
src/logs/: log_2025-11-11.txt
src/models/: SimilarVideoGroup.py  VARequest.py  Video.py  VideoMetadata.py  request_args.py  response_args.py
src/models/requests/: VideoAddRequest.py
src/models/responses/: ApiResponse.py  SimilarVideosResponse.py  VideoAddResponse.py  VideoRemoveResponse.py
src/my_va/: MyVideoAnalyzer.py
src/storages/: DbAccessor.py  DbAccessor_example.py  IDbAccessor.py  IVectorDbAccessor.py  VectorDbAccessor.py  VectorDbAccessor_example.py
src/storages/memory/: dumbs.py
src/utils/: DbAccessor.py  DbAccessor_example.py  KeyframeSampler.py  KeyframesSampler.py  KeyframesSampler_example.py  Logger.py  Logger_example.py
