[project]
name = "vv-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "mysql-connector-python>=9.5.0",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pymediainfo>=7.0.1",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
